k8s/applications/network/adguard/adguard.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/part-of: applications
    app.kubernetes.io/managed-by: argocd
  name: adguard-home
  namespace: adguard
spec:
  serviceName: "adguard-headless"
  replicas: 2
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
        app.kubernetes.io/name: adguard-home
        app.kubernetes.io/part-of: applications
        app.kubernetes.io/managed-by: argocd
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 10
      tolerations:
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - adguard-home
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: adguard-home
        image: ghcr.io/vegops/adguard:0.107.77-r1@sha256:fa019ccf454a367003bda741698142a0b59629063ec84fab9450eebc80d7bdaf
        ports:
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 3000
          name: http-initial
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: "1"
            memory: 1Gi
        volumeMounts:
        - name: adguard-data
          mountPath: /adguard/var
        - name: adguard-config
          mountPath: /adguard/etc
  volumeClaimTemplates:
  - metadata:
      name: adguard-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
      storageClassName: "proxmox-csi"
  - metadata:
      name: adguard-config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
      storageClassName: "proxmox-csi"
