k8s/applications/network/adguard/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home-0
  namespace: adguard
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - dns01.eudald.gr
  rules:
  - backendRefs:
    - name: adguard-home-0
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home-1
  namespace: adguard
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - dns02.eudald.gr
  rules:
  - backendRefs:
    - name: adguard-home-1
      port: 80
